--- a/ProjetoWeb/quiz.css
+++ b/ProjetoWeb/quiz.css
@@ -11,6 +11,12 @@ main {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+img {
+    display: block;
+    margin: 0 auto; 
+    max-width: 100%; 
+    height: auto; 
+}
 
 h1, h2 {
     text-align: center;
