--- a/ProjetoWeb/quiz.css
+++ b/ProjetoWeb/quiz.css
@@ -1,21 +1,22 @@
 
 
 
-main {
-    border-left: 20px solid black;  
-    border-right: 20px solid black; 
+#pai {
+    border: 5px solid black; 
     padding: 20px;
-    border-radius: 10px;
-    background-color: #fff;
-    width: 60%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 15px; 
+    background-color: #f9f9f9; 
+    width: 80%; 
+    margin: 0 auto; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    font-size: larger;
 }
-
 img {
     display: block;
     margin: 0 auto; 
     max-width: 100%; 
-    height: auto; 
+    height: auto;
+    width: 700px;
 }
 
 h1, h2 {
@@ -29,7 +30,7 @@ button {
     width: 100%;
     padding: 10px;
     margin: 20px 0;
-    background-color: #4CAF50; 
+    background-color: blue; 
     color: white;
     border: none;
     border-radius: 5px;
@@ -38,7 +39,7 @@ button {
 }
 
 button:hover {
-    background-color: #45a049; 
+    background-color: blue; 
     
 }
 
@@ -56,5 +57,5 @@ hr {
     text-align: center;
     font-size: 1.5rem;
     font-weight: bold;
-    color: #4CAF50;
+    color: blue;
 }
